--- a/docker-compose.front.yml
+++ b/docker-compose.front.yml
@@ -7,6 +7,8 @@ services:
       - "8080:8080"
     depends_on:
       - database
+    env_file:
+      - .env
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - SPRING_DATASOURCE_URL=jdbc:mysql://database:3306/cesi_zen
