--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,11 @@ jwt.expiration=3600000
 
 # Doc swagger
 springdoc.api-docs.version=openapi_3_0
+
+#Mail :
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=test.cesi.dijon@gmail.com
+spring.mail.password=vcdcwarpwmwdjplj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
